# ai-kit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: evaluate-skills.yml
evals/: __main__.py  claude_client.py  dynamic_eval.py  llm_review.py  models.py  parser.py  report.py  static_eval.py  tiered_eval.py
evals/tiers/: __init__.py  tier1_spec.py  tier2_security.py  tier3_tokens.py  tier4_effectiveness.py
skills/: evaluate-skill.md
skills/android-coroutines-flow/: SKILL.md
skills/android-datastore/: SKILL.md
skills/android-junit5/: SKILL.md
skills/android-mvvm/: SKILL.md
skills/android-repository/: SKILL.md
skills/android-room/: SKILL.md
skills/compose/compose-animations/: SKILL.md
skills/compose/compose-modifier-and-layout-style/: SKILL.md
skills/compose/compose-side-effects/: SKILL.md
skills/compose/compose-slot-api-pattern/: SKILL.md
skills/compose/compose-stability-diagnostics/: SKILL.md
skills/compose/compose-state-hoisting/: SKILL.md
skills/compose/compose-state-holder-ui-split/: SKILL.md
skills/evaluate-skill/: SKILL.md
skills/example/: SKILL.md
skills/tests/android-paparazzi/: SKILL.md
skills/tests/android-viewmodel-test/: SKILL.md
tests/evals/: conftest.py  test_tier1.py  test_tier2.py  test_tier3.py  test_tier4.py
tests/evaluate-skill/: 01_named_skill.yaml  02_no_skill_specified.yaml  03_fix_requested.yaml
tests/example/: 01_basic.yaml  02_file.yaml
