[project]
name = "ai-kit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.12.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
eval-skill = "evals.__main__:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["evals"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
